fix text welcome on mobile devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -496,8 +496,9 @@ body {
   }
 
   .welcome-content p {
-    font-size: 12px; /* Reduce paragraph size */
+    font-size: 16px; 
     margin-inline: 0px;
+    text-align: left;
   }
 }
 
